--- a/style.css
+++ b/style.css
@@ -28,19 +28,19 @@ h1 {
 h4 {
   color: #f9f9f9;
   margin: 0;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 p {
-  font-size: 20px;
+  font-size: 29px;
 }
 
 .highlight {
-  font-weight: 800;
+  font-weight: 700;
 }
 
 .header-links {
-  position: absolute; /*relative to html since parent has a static position*/
+  position: absolute;
   top: 60px;
   right: 5%;
   padding: 30px 10px;
@@ -50,13 +50,13 @@ p {
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  margin-left: 5px;
+  /* margin-left: 5px; */
   background: none;
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
-  /* opacity: 0.9; */
   border: none;
+  /* get bigger pictures */
 }
 
 .btn:hover {
@@ -76,10 +76,10 @@ p {
 }
 
 figure {
-  width: 160px;
+  width: 162px;
   position: absolute;
   margin: 0;
-  top: 360px;
+  top: 290px;
   right: 10%;
 }
 
@@ -95,21 +95,19 @@ main {
   text-align: center;
 }
 
-.green-section {
-  background: #9ce9ce;
-  width: 100%;
-  height: 250px;
-}
-
-.gray-section {
-  background: #f7f7f7;
-  width: 100%;
-  height: 150px;
+.tech {
+  background: #f5f5f5;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 30px;
 }
 
 .summary {
-  display: flex;
-  flex-direction: column;
+  background: #9ce9ce;
+  height: auto;
   text-align: left;
   padding: 80px 30px;
   margin: 0 auto;
@@ -117,19 +115,54 @@ main {
 
 .line-dot {
   height: 3px;
-  width: 50px;
+  width: 55px;
   background: rgb(0, 54, 36);
-  position: absolute;
-  flex: 1;
+  position: relative;
+  float: left;
+  margin-top: 15px;
+  margin-right: 13px;
 }
 
 .line-dot::after {
   content: "";
-  height: 10px;
-  width: 10px;
+  height: 11px;
+  width: 11px;
   position: relative;
   float: right;
-  top: -3px;
+  bottom: 4px;
   border-radius: 50%;
   background: rgb(0, 54, 36);
+}
+
+.tech-box {
+  background: rgb(0, 54, 36);
+  height: 34px;
+  width: 83px;
+}
+
+h3 {
+  color: #f5f5f5;
+  font-size: 22px;
+  margin: 4px;
+  font-weight: bold;
+}
+
+@media (min-width: 667px) {
+  figure {
+    width: 220px;
+    top: 260px;
+    right: 10%;
+  }
+}
+
+@media (min-width: 1025px) {
+  figure {
+    width: 330px;
+    top: 360px;
+    right: 10%;
+  }
+
+  header {
+    height: 650px;
+  }
 }
