--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@ header {
 }
 
 .header-text {
-  width: 75%;
   position: absolute;
-  top: 170px;
+  top: 165px;
   left: 10%;
 }
 
@@ -30,10 +29,11 @@ h4 {
   color: #f9f9f9;
   margin: 0;
   font-weight: 300;
+  font-size: 13px;
 }
 
 p {
-  font-size: 29px;
+  font-size: 17;
 }
 
 .highlight-name {
@@ -49,8 +49,9 @@ p {
 
 .btn {
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 44px;
+  height: 44px;
+  margin: 5px;
   /* margin-left: 5px; */
   background: none;
   background-repeat: no-repeat;
@@ -65,15 +66,15 @@ p {
 }
 
 #btn-in {
-  background-image: url("images/linkedin.png");
+  background-image: url("images/linkedin-48.png");
 }
 
 #btn-git {
-  background-image: url("images/github.png");
+  background-image: url("images/github-48.png");
 }
 
 #btn-stack {
-  background-image: url("images/stackoverflow.png");
+  background-image: url("images/stackoverflow-48.png");
 }
 
 figure {
@@ -102,7 +103,7 @@ main {
   background: rgb(0, 54, 36);
   position: relative;
   float: left;
-  margin-top: 15px;
+  margin-top: 9px;
   margin-right: 13px;
 }
 
@@ -117,29 +118,25 @@ main {
   background: rgb(0, 54, 36);
 }
 
-.summary,
-.projects {
+.textbox {
+  margin: 0 7%;
+  max-width: 800px;
+}
+
+section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background: #9ce9ce; */
   height: auto;
   text-align: left;
-  padding: 80px 30px;
+  padding: 40px 20px;
   width: auto;
-  margin: 0 5%;
 }
 
 .tech {
   background: #f5f5f5;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 80px 30px;
-  width: auto;
+  margin: 0;
 }
 
 h3 {
@@ -152,7 +149,7 @@ h3 {
 
 h5 {
   color: #f5f5f5;
-  font-size: 22px;
+  font-size: 17px;
   padding: 5px;
   font-weight: bold;
 }
@@ -170,18 +167,20 @@ h5 {
   flex-direction: column;
   position: relative;
   text-align: left;
-  /* justify-content: center; */
-  align-items: center;
   width: 100%;
   margin: 20px;
   max-width: 303px;
+}
+
+.project-cards:hover {
+  opacity: 0.9;
 }
 
 .project-card-backgound {
   display: flex;
   background-size: cover;
   background-position: center center;
-  box-shadow: inset 0 0 0 100vmax rgba(109, 214, 179, 0.233);
+  box-shadow: inset 0 0 0 100vmax rgba(45, 97, 69, 0.61);
   border-radius: 3px;
   width: 303px;
   height: 179px;
@@ -191,7 +190,7 @@ h5 {
 
 .project-cards p {
   font-family: "Roboto", sans-serif;
-  font-size: 25px;
+  font-size: 17px;
 }
 
 a {
@@ -203,15 +202,49 @@ a {
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 22px;
+  font-size: 17px;
   color: #f5f5f5;
   position: absolute;
 }
 
 .highlight {
   font-family: "Roboto", sans-serif;
-  font-size: 25px;
+  font-size: 17px;
   font-weight: 700;
+}
+
+.project-tags {
+  display: flex;
+}
+
+.tag {
+  background-color: #3aa028a8;
+  color: #f9f9f9;
+  padding: 2px 6px;
+  margin: 0 3px 5px 3px;
+  font-size: 9px;
+}
+
+.other-projects {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  max-width: 646px;
+  margin: 5%;
+}
+
+.other-projects-header {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-size: 21px;
+  color: rgb(0, 54, 36);
+  font-weight: 700;
+  margin: 80px 0 20px 0;
+  align-self: center;
+}
+
+.other-project-links:hover {
+  opacity: 0.8;
 }
 
 @media (min-width: 667px) {
