--- a/style.css
+++ b/style.css
@@ -134,8 +134,9 @@ section {
   width: auto;
 }
 
-.tech {
-  background: #f5f5f5;
+.tech,
+.my-thoughts {
+  background: #e8fff2;
   margin: 0;
 }
 
@@ -145,6 +146,7 @@ h3 {
   font-size: 22px;
   padding: 5px;
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 h5 {
@@ -176,7 +178,7 @@ h5 {
   opacity: 0.9;
 }
 
-.project-card-backgound {
+.card-backgound {
   display: flex;
   background-size: cover;
   background-position: center center;
@@ -233,18 +235,43 @@ a {
   margin: 5%;
 }
 
-.other-projects-header {
+.other-header {
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   font-size: 21px;
   color: rgb(0, 54, 36);
   font-weight: 700;
-  margin: 80px 0 20px 0;
+  margin: 30px 0 20px 0;
   align-self: center;
 }
 
-.other-project-links:hover {
+.other-links:hover {
   opacity: 0.8;
+}
+
+.thoughts-card-backgound {
+  display: flex;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 3px;
+  width: 303px;
+  height: 179px;
+  justify-content: center;
+  align-items: center;
+}
+
+.date {
+  margin: 4px 0;
+  color: rgb(112, 112, 112);
+  font-size: 17px;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+}
+
+.thoughts-highlight {
+  font-family: "Roboto", sans-serif;
+  font-size: 21px;
+  font-weight: 700;
 }
 
 @media (min-width: 667px) {
