--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ header {
   position: absolute;
   top: 165px;
   left: 10%;
+  width: 300px;
 }
 
 h1 {
@@ -34,7 +35,7 @@ h4 {
 }
 
 p {
-  font-size: 19;
+  font-size: 19px;
 }
 
 .highlight-name {
@@ -45,7 +46,7 @@ p {
   position: absolute;
   top: 60px;
   right: 5%;
-  padding: 30px 10px;
+  padding: 30px;
 }
 
 .btn {
@@ -119,7 +120,7 @@ main {
 
 .textbox {
   margin: 0 7%;
-  max-width: 800px;
+  max-width: 1080px;
 }
 
 section {
@@ -233,7 +234,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  max-width: 646px;
+  max-width: 900px;
   margin: 5px;
 }
 
@@ -284,7 +285,7 @@ a {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 90%;
-  max-width: 700px;
+  max-width: 800px;
 }
 
 ul {
@@ -366,13 +367,17 @@ footer {
   .more-btn {
     margin: 30px;
   }
+
+  h1 {
+    font-size: 65px;
+  }
 }
 
 @media (min-width: 1025px) {
   figure {
-    width: 330px;
+    width: 332px;
     top: 230px;
-    right: 10%;
+    right: 13%;
   }
 
   header {
@@ -398,5 +403,42 @@ footer {
 
   .project-cards {
     max-width: 403px;
+  }
+
+  h1 {
+    font-size: 82px;
+  }
+
+  h4 {
+    font-size: 28px;
+    width: 500px;
+  }
+
+  p {
+    font-size: 30px;
+  }
+
+  p.card-description {
+    font-size: 25px;
+  }
+
+  .highlight {
+    font-size: 25px;
+  }
+
+  li {
+    font-size: 25px;
+  }
+
+  ul {
+    margin: 8px;
+  }
+
+  h3 {
+    font-size: 48px;
+  }
+
+  h6 {
+    font-size: 25px;
   }
 }
